# mindmoodle

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  EXAMPLES.md  LICENSE  MELLEA.md  README.md  SUMMARY.md  app.py  chainlit.md  copilot_config.py  demo.py  deploy.sh  docker-compose.yml  index.html  moodle_widget.html  moodle_widget_animals.html  nginx.conf  pyproject.toml  requirements.txt  test_safety.py
.chainlit/: config.toml
.github/: QUICK_START.md  SETUP_SECRETS.md
.github/workflows/: deploy.yml
public/: copilot-companion.js
