[project]
name = "mindmoodle"
version = "0.1.0"
description = "Mental health support chatbot with animal companions for Moodle"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.2",
    "mellea>=0.2.0",
    "litellm>=1.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
